--- a/Flat/Main/Src/warnings.html
+++ b/Flat/Main/Src/warnings.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Game</title>
-    <link rel="stylesheet" type="text/css" href="src/warningCSS.css">
+    <link rel="stylesheet" type="text/css" href="warningCSS.css">
     </head>
 <body>
     <canvas id = "canvas" width="600" height="300">
 
     </canvas>
 
-    <script src = "src/warningJS.js"></script>
+    <script src = "warningJS.js"></script>
 
 </body>
 </html>
