--- a/Flat/Main/Src/controls.html
+++ b/Flat/Main/Src/controls.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Game</title>
-    <link rel="stylesheet" type="text/css" href="src/controlsCSS.css">
+    <link rel="stylesheet" type="text/css" href="controlsCSS.css">
 </head>
 <body>
 <canvas id = "canvas" width="600" height="300">
 
 </canvas>
 
-<script src = "src/controlsJS.js"></script>
+<script src = "controlsJS.js"></script>
 
 </body>
 </html>
