Spacing/Sizing/Background Colour
Changed spacing so that everything is centered and not at the very top of the browser screen.
Resized warning and controls pages to fit game area size. Adjusted recurring warning gif that came with this change.
Set background colour to be the same across all HTML pages so far.

--- a/Flat/Main/Src/Title.html
+++ b/Flat/Main/Src/Title.html
@@ -5,6 +5,10 @@
     <title>Game Production2</title>
 
     <style>
+        html
+        {
+            background-color:  #3c3c3c;
+        }
         body
         {
             margin: 0 auto;
