Level Name Change
Changed src names to match level

--- a/Flat/Lvl6Lab/Src/Lab.html
+++ b/Flat/Lvl6Lab/Src/Lab.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <title>Flat</title>
 
-    <link rel="stylesheet" type="text/css" href="Main.css">
+    <link rel="stylesheet" type="text/css" href="lab.css">
 
 
 
@@ -24,7 +24,7 @@
 
 </div>
 
-<script src="Main.js"></script>
+<script src="lab.js"></script>
 
 
 </body>
