Level Compilation (Lvl 1 complete)
Bringing all levels into main javascript file.
Globalized most functions. Created 3D array to store all level maps, which are initialized upon starting level.

--- a/Flat/Main/Src/Main.html
+++ b/Flat/Main/Src/Main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Flat</title>
-    <link rel="stylesheet" type="text/css" href="sewer.css">
+    <link rel="stylesheet" type="text/css" href="Main.css">
 
 </head>
 <body>
@@ -20,7 +20,7 @@
 </div>
 
 
-<script src="sewer.js"></script>
+<script src="Main.js"></script>
 
 
 </body>
