--- a/Flat/0Main/Src/index.html
+++ b/Flat/0Main/Src/index.html
@@ -33,7 +33,7 @@
     var playerImg = new Image();
     playerImg.src = "../images/player.png";
     var titleImg = new Image();
-    titleImg.src = "../images/title.png"; //temporary image and name
+    titleImg.src = "../images/survivethemob.png"; //temporary image and name
     var spotlightLImg = new Image();
     spotlightLImg.src = "../images/spotlight-left.png";
     var spotlightRImg = new Image();
