--- a/Flat/0Main/Src/Main.html
+++ b/Flat/0Main/Src/Main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Flat</title>
     <link rel="stylesheet" type="text/css" href="Main.css">
+     <link rel="stylesheet" type="text/css" href="Dialog.css">
 
 </head>
 <body>
@@ -21,6 +22,7 @@
 
 
 <script src="Main.js"></script>
+<script src="Dialog.js"></script>
 
 
 </body>
