--- a/Flat/0Main/Src/Main.html
+++ b/Flat/0Main/Src/Main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Flat</title>
     <link rel="stylesheet" type="text/css" href="Main.css">
-     <link rel="stylesheet" type="text/css" href="Dialog.css">
+    <link rel="stylesheet" type="text/css" href="Dialog.css">
 
 </head>
 <body>
@@ -20,10 +20,14 @@
 
 </div>
 
+<div id="dialog">
+    <div id="portrait"></div>
+    <p id="name"></p>
+    <p id="output"></p>
+</div>
 
 <script src="Main.js"></script>
 <script src="Dialog.js"></script>
-
 
 </body>
 </html>
