Integrated with Soyoung lvl + Fix
Fixed canvas sizing so that screen does not scroll when moving the player

--- a/Flat/0Main/Src/Main.html
+++ b/Flat/0Main/Src/Main.html
@@ -4,24 +4,30 @@
     <meta charset="UTF-8">
     <title>Flat</title>
     <link rel="stylesheet" type="text/css" href="Main.css">
+    <link rel="stylesheet" type="text/css" href="Dialog.css">
 
 </head>
 <body>
 
 
-<br>
-<br>
-
-
+<div id = "holder">
 <div id="center">
 
     <canvas width="800" height="600">Your browser does not support Canvas.</canvas>
 
 </div>
 
+<div id="dialog" height="162">
+
+    <div id="portrait">     </div>
+    <p id="name">           </p>
+    <p id="output">         </p>
+
+</div></div>
 
 <script src="Main.js"></script>
-
+<script src="Dialog.js"></script>
+<script src="HeloLvl.js"></script>
 
 </body>
 </html>
