--- a/Flat/0Main/Src/Main.html
+++ b/Flat/0Main/Src/Main.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,23 +11,27 @@
 
 
 <div id = "holder">
-<div id="center">
 
-    <canvas width="800" height="600">Your browser does not support Canvas.</canvas>
+    <div id="center">
+
+        <canvas id= "regular" width="800" height="600">Your browser does not support Canvas.</canvas>
+        <canvas id="HeloCanvas" width="360" height="360">Your browser does not support Canvas.</canvas>
+
+    </div>
 
 </div>
 
-<div id="dialog" height="162">
+<div id="dialog">
 
     <div id="portrait">     </div>
     <p id="name">           </p>
     <p id="output">         </p>
 
-</div></div>
+</div>
 
 <script src="Main.js"></script>
 <script src="Dialog.js"></script>
-<script src="HeloLvl.js"></script>
+<script src="HelicopterLevel.js"></script>
 
 </body>
 </html>
