--- a/Flat/0Main/Src/Main.html
+++ b/Flat/0Main/Src/Main.html
@@ -10,25 +10,30 @@
 <body>
 
 
-<br>
-<br>
+<div id = "holder">
 
+    <div id="center">
 
-<div id="center">
+        <canvas id= "regular" width="800" height="600">Your browser does not support Canvas.</canvas>
+        <canvas id="HeloCanvas" width="360" height="360">Your browser does not support Canvas.</canvas>
 
-    <canvas width="800" height="600">Your browser does not support Canvas.</canvas>
+    </div>
 
 </div>
 
 <div id="dialog">
-    <div id="portrait"></div>
-    <p id="name"></p>
-    <p id="output"></p>
+
+    <div id="portrait">     </div>
+    <p id="name">           </p>
+    <p id="output">         </p>
+
 </div>
 
 <script src="Main.js"></script>
 <script src="Dialog.js"></script>
+<script src="HelicopterLevel.js"></script>
 
 </body>
 </html>
+
 
