partial soyoung merged

--- a/Flat/0Main/Src/Main.html
+++ b/Flat/0Main/Src/Main.html
@@ -13,10 +13,14 @@
 <br>
 
 
-<div id="center">
+<div id = "holder">
 
-    <canvas width="800" height="600">Your browser does not support Canvas.</canvas>
+    <div id="center">
 
+
+        <canvas id= "regular" width="800" height="600">Your browser does not support Canvas.</canvas>
+        <canvas id="HeloCanvas" width="360" height="360">Your browser does not support Canvas.</canvas>
+    </div>
 </div>
 
 <div id ="dialog">
@@ -29,6 +33,7 @@
 <script src="Dialog.js"></script>
 <script src="Main.js"></script>
 <script src="tutorialL1.js"></script>
+<script src="HelicopterLevel.js"></script>
 
 </body>
 </html>
