--- a/Flat/0Main/Src/Main.html
+++ b/Flat/0Main/Src/Main.html
@@ -32,6 +32,9 @@
 
 <script src="Dialog.js"></script>
 <script src="Main.js"></script>
+<script src="enemies.js"></script>
+<script src="level1.js"></script>
+<script src="level2.js"></script>
 <script src="tutorialL1.js"></script>
 <script src="HelicopterLevel.js"></script>
 
