--- a/Flat/0Main/Src/Main.html
+++ b/Flat/0Main/Src/Main.html
@@ -31,12 +31,19 @@
 </div>
 
 <script src="Dialog.js"></script>
-<script src="Main.js"></script>
-<script src="enemies.js"></script>
+<script src="tutorialL1.js"></script>
 <script src="level1.js"></script>
 <script src="level2.js"></script>
-<script src="tutorialL1.js"></script>
+<script src="level3.js"></script>
+<script src="level4.js"></script>
+<script src="level5.js"></script>
+<script src="level6.js"></script>
+<script src="level7.js"></script>
+<script src="level8.js"></script>
+<script src="level11.js"></script>
 <script src="HelicopterLevel.js"></script>
+<script src="enemies.js"></script>
+<script src="Main.js"></script>
 
 </body>
 </html>
