--- a/Flat/index.html
+++ b/Flat/index.html
@@ -5,6 +5,7 @@
     <title>Flat</title>
     <link rel="stylesheet" type="text/css" href="0Main/Src/index.css">
     <link rel="stylesheet" type="text/css" href="0Main/Src/dialog.css">
+    <link rel="stylesheet" type="text/css" href="0Main/Src/healthInventory.css">
 
 </head>
 <body>
@@ -23,6 +24,8 @@
     <p id = "output"></p>
 
 </div>
+
+
 
 <script src ="0Main/Src/index.js"></script>
 <script src="0Main/Src/dialog.js"></script>
