--- a/Flat/index.html
+++ b/Flat/index.html
@@ -5,7 +5,8 @@
     <title>Flat</title>
     <link rel="stylesheet" type="text/css" href="0Main/Src/index.css">
     <link rel="stylesheet" type="text/css" href="0Main/Src/dialog.css">
-
+    <link rel="stylesheet" type="text/css" href="0Main/Src/healthInventory.css">
+    
 </head>
 <body>
 
