--- a/Flat/index.html
+++ b/Flat/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+<div id = "placeHolder"></div>
+
 <div id = "holder">
 
     <div id = "title"> <!--  This div and everything in it gets removed after the title controls and warning pages -->
@@ -18,12 +20,7 @@
 
 </div>
 
-<div id ="dialog">
-    <div id ="portrait"></div>
-    <p id = "name"></p>
-    <p id = "output"></p>
 
-</div>
 
 
 
